objects/Service_Item__c/Service_Item__c.object-meta.xml
<CustomObject>
    <label>Service Item</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Service Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>