objects/Service_Item__c/fields/Course_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Course_Invoice__c</fullName>
    <label>Course Invoice</label>
    <referenceTo>Course_Invoice__c</referenceTo>
    <relationshipLabel>Service Items</relationshipLabel>
    <relationshipName>Service_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>