objects/Service_Item__c/fields/Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate__c</fullName>
    <formula>Course_Invoice__r.Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>