objects/Service_Item__c/fields/Service_Daily_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_Daily_Amount__c</fullName>
    <formula>Hourly_Rate__c * Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Daily Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>